--- a/actions/deploy/k8s/action.yaml
+++ b/actions/deploy/k8s/action.yaml
@@ -53,6 +53,7 @@ runs:
         ${{ inputs.VAULT_SECRET_COMMON_PATH }} NAMESPACE | NAMESPACE;
         ${{ inputs.VAULT_SECRET_COMMON_PATH }} AUTOSCALER | AUTOSCALER;
         ${{ inputs.VAULT_SECRET_COMMON_PATH }} HTTP_HOST | HTTP_HOST;
+        ${{ inputs.VAULT_SECRET_COMMON_PATH }} NGINX_EXTRA_CONFIG | NGINX_EXTRA_CONFIG;
         ${{ inputs.VAULT_SECRET_PATH }} MASTER_IP | MASTER_IP;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} AWS_ACCESS_KEY_ID_ECR | AWS_ACCESS_KEY_ID_ECR;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} AWS_SECRET_ACCESS_KEY_ECR | AWS_SECRET_ACCESS_KEY_ECR;
