--- a/actions/deploy/k8s/action.yaml
+++ b/actions/deploy/k8s/action.yaml
@@ -81,19 +81,19 @@ runs:
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} AWS_SECRET_ACCESS_KEY_EKS | AWS_SECRET_ACCESS_KEY_EKS;
         ${{ inputs.VAULT_SECRETS_CICD_PATH }} K8S_CLUSTER_INFRA | K8S_CLUSTER_INFRA;
 
-  - name: Install SSH Key
-    if: ${{ env.K8S_CLUSTER_INFRA != 'EKS' }}
-    uses: shimataro/ssh-key-action@v2
-    with:
-      key: ${{ env.SSH_KEY }}
-      known_hosts: 'SSH KEY'
-      if_key_exists: replace
+  #- name: Install SSH Key
+  #  if: ${{ env.K8S_CLUSTER_INFRA != 'EKS' }}
+  #  uses: shimataro/ssh-key-action@v2
+  #  with:
+  #    key: ${{ env.SSH_KEY }}
+  #    known_hosts: 'SSH KEY'
+  #    if_key_exists: replace
   
-  - name: Add Known Hosts
-    if: ${{ env.K8S_CLUSTER_INFRA != 'EKS' }}
-    run: |
-      ssh-keyscan -H ${{ env.MASTER_IP }} >> ~/.ssh/known_hosts
-    shell: bash
+  #- name: Add Known Hosts
+  #  if: ${{ env.K8S_CLUSTER_INFRA != 'EKS' }}
+  #  run: |
+  #    ssh-keyscan -H ${{ env.MASTER_IP }} >> ~/.ssh/known_hosts
+  #  shell: bash
 
   - name: Extract Kubeconfig file
     if: ${{ env.K8S_CLUSTER_INFRA != 'EKS' }}
