project name unmask

--- a/actions/security/sast/action.yaml
+++ b/actions/security/sast/action.yaml
@@ -78,7 +78,6 @@ runs:
           ${{ inputs.VAULT_SECRETS_CICD_PATH }} SONARQUBE_HOST | SONARQUBE_HOST;
           ${{ inputs.VAULT_SECRETS_CICD_PATH }} SONARQUBE_TOKEN | SONARQUBE_TOKEN;
           ${{ inputs.VAULT_SECRETS_CICD_PATH }} SNYK_TOKEN | SNYK_TOKEN;
-          ${{ inputs.VAULT_SECRETS_PATH }} PROJECT_KEY | PROJECT_KEY;
   
     - name: Import Secrets
       if: ${{ inputs.VAULT_ENABLED == 'false' }}
@@ -93,10 +92,11 @@ runs:
 
     - name: SonarQube Scan
       if: ${{ inputs.SONARQUBE_SCAN == 'true' }}
+      env:
       run: sonar-scanner
         -Dsonar.host.url=${{ env.SONARQUBE_HOST }}
         -Dsonar.login=${{ env.SONARQUBE_TOKEN }}
-        -Dsonar.projectKey=${{ env.PROJECT_KEY }}
+        -Dsonar.projectKey= ${{ env.PROJECT_NAME }}
         -Dsonar.sources=${{ github.workspace }}
         -Dsonar.pullrequest.key=${{github.event.pull_request.number}}
         -Dsonar.pullrequest.branch=${{github.head_ref}}
