--- a/actions/security/sast/action.yaml
+++ b/actions/security/sast/action.yaml
@@ -123,10 +123,9 @@ runs:
       uses: trufflesecurity/trufflehog@main
       continue-on-error: true
       with:
-        path: ${{ github.workspace }}
-        base: "${{ github.event.repository.default_branch }}"
-        head: HEAD
-        extra_args: --debug
+        base: ""
+        head: ${{ github.ref_name }}
+        extra_args: --debug --only-verified
 
     - name: Setup Python
       if: ${{ inputs.BANDIT_SCAN == 'true' && inputs.SNYK_SCAN == 'true' }}
