--- a/actions/security/sast/action.yaml
+++ b/actions/security/sast/action.yaml
@@ -117,6 +117,17 @@ runs:
         cat .scannerwork/report-task.txt
       shell: bash
 
+    - name: Secret Scan
+      if: ${{ inputs.TRUFFLEHOG_SCAN == 'true' }}
+      id: trufflehog
+      uses: trufflesecurity/trufflehog@main
+      continue-on-error: true
+      with:
+        path: ${{ github.workspace }}
+        base: ${{ github.event.repository.default_branch }}
+        head: ${{ github.ref }}
+        extra_args: --debug --only-verified
+
     - name: Setup Python
       if: ${{ inputs.BANDIT_SCAN == 'true' && inputs.SNYK_SCAN == 'true' }}
       uses: actions/setup-python@v2
