--- a/actions/security/sast/action.yaml
+++ b/actions/security/sast/action.yaml
@@ -134,6 +134,12 @@ runs:
         cache: "pip"
         cache-dependency-path: ${{ inputs.PYTHON_DEP_PATH }}
 
+    - name: Upgrade PIP
+      if: ${{ inputs.BANDIT_SCAN == 'true' && inputs.SNYK_SCAN == 'true' }}
+      run: | 
+        pip install --upgrade pip
+      shell: bash
+      
     - name: Install and scan with Bandit
       if : ${{ inputs.BANDIT_SCAN == 'true' }}
       run: | 
