--- a/actions/security/sast/action.yaml
+++ b/actions/security/sast/action.yaml
@@ -130,11 +130,9 @@ runs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ inputs.PYTHON_VERSION }}
-        cache: "pip"
-        cache-dependency-path: ${{ inputs.PYTHON_DEP_PATH }}
-
+        cache: 'pip'
+        
     - name: Upgrade PIP
-      if: ${{ inputs.BANDIT_SCAN == 'true' && inputs.SNYK_SCAN == 'true' }}
       run: | 
         python -m pip install pip==23.0.1
       shell: bash
