--- a/actions/security/sast/action.yaml
+++ b/actions/security/sast/action.yaml
@@ -127,14 +127,16 @@ runs:
         extra_args: --debug --only-verified
 
     - name: Setup Python
+      if: ${{ inputs.BANDIT_SCAN == 'true' && inputs.SNYK_SCAN == 'true' }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ inputs.PYTHON_VERSION }}
-        cache: 'pip'
+        cache: "pip"
+        cache-dependency-path: ${{ inputs.PYTHON_DEP_PATH }}
         
     - name: Upgrade PIP
       run: | 
-        python -m pip install pip==23.0.1
+        python -m pip install pip
       shell: bash
 
     - name: Install and scan with Bandit
