truffle hog action to custom

--- a/actions/security/sast/action.yaml
+++ b/actions/security/sast/action.yaml
@@ -120,13 +120,10 @@ runs:
     - name: Secret Scan
       if: ${{ inputs.TRUFFLEHOG_SCAN == 'true' }}
       id: trufflehog
-      uses: trufflesecurity/trufflehog@main
       continue-on-error: true
-      with:
-        path: ${{ github.workspace }}
-        base: "${{ github.event.repository.default_branch }}"
-        head: HEAD
-        extra_args: --debug
+      run: |
+        trufflehog filesystem ${{ github.workspace }} --no-update
+      shell: bash
 
     - name: Setup Python
       if: ${{ inputs.BANDIT_SCAN == 'true' && inputs.SNYK_SCAN == 'true' }}
