--- a/actions/security/sast/action.yaml
+++ b/actions/security/sast/action.yaml
@@ -122,7 +122,7 @@ runs:
       id: trufflehog
       continue-on-error: true
       run: |
-        trufflehog filesystem ${{ github.workspace }} --no-update
+        trufflehog filesystem ${{ github.workspace }}/${{ PROJECT_NAME }} --no-update
       shell: bash
 
     - name: Setup Python
