added command python3 in synk

--- a/actions/security/sast/action.yaml
+++ b/actions/security/sast/action.yaml
@@ -180,7 +180,7 @@ runs:
       run: |
         wget -q https://static.snyk.io/cli/latest/snyk-linux && mv ./snyk-linux ./snyk && chmod +x ./snyk
         ./snyk auth ${{ env.SNYK_TOKEN }}
-        ./snyk test --file=${{ inputs.SYNK_PYTHON_DEP_PATH }} --project-name=${{ inputs.PROJECT_NAME }} --package-manager=pip --sarif-file-output=snyk.sarif ${{ inputs.EXTRA_ARGS}}
+        ./snyk test --file=${{ inputs.SYNK_PYTHON_DEP_PATH }} --project-name=${{ inputs.PROJECT_NAME }} --package-manager=pip --sarif-file-output=snyk.sarif --command=python3
       working-directory: ${{ inputs.PROJECT_APP_PATH }}
       shell: bash
 
